# GLM_Pricing_French_MTPL

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Notebooks/: 01_data_exploration.ipynb
data/: README.md  data_download.ipynb
data/sample/: freMTPL_sample.csv
notebooks/: 01_eda.ipynb  02_frequency_glm.ipynb  03_severity_glm.ipynb  04_pure_premium.ipynb
src/glm_pricing/: __init__.py  data.py  evaluation.py  models.py  pipeline.py  preprocessing.py
tests/: test_data.py  test_evaluation.py  test_models.py  test_preprocessing.py
